# raaga-therapy

./: .gitignore  Readme.md
backend/: app.py  audio_engine.py  classifier.py  eeg_listener.py  requirements.txt
backend/audio/: README.txt
backend/capsule-public-v1.7.0/Example/Win/: CMakeLists.txt  CMakePresets.json
backend/capsule-public-v1.7.0/Example/Win/CapsuleFilteredSignalExample/: main.cpp
backend/capsule-public-v1.7.0/capsuleAPI/Win/Include/Capsule/: CEEGTimedData.h  CNFB.h  CNFBCalibrator.h  CPhysiologicalStates.h
backend/capsule-public-v1.7.0/capsuleAPI/Win/Lib/: CapsuleClient.lib
capsule-public-v1.7.0/Example/Win/CapsuleFilteredSignalExample/: CMakeLists.txt  main.cpp
capsule-public-v1.7.0/capsuleAPI/Win/Include/: CClientAPI.h
capsule-public-v1.7.0/capsuleAPI/Win/Include/Capsule/: CCardio.h  CClient.h  CDeviceInfo.h  CEmotions.h  CError.h  CNFBMetricsProductivity.h  CSession.h
capsule-public-v1.7.0/capsuleAPI/Win/Source/: ExampleUtils.hpp  FilteredSignalExample.cpp  RawSignalExample.cpp  main.cpp
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx
frontend/src/components/: EEGChart.js  EEGChart.jsx  RagaPlayerStatus.jsx  StateHistoryChart.jsx
